# PostTrainBench

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  job-gpu.yaml  job.yaml  job_prime_rl.yaml  pyproject.toml  test_modal_image.py  test_prime_rl.py
.github/workflows/: build-images.yml
dev_utils/: extract_traces.py
scripts/: _1_mine_trajectory.py  _1_rerun_regressions.py  _2_judge.py  _3_mine_trajectory.py  _3_report.py  _4_build_leaderboard.py  _4_report.py  _5_rerun_regressions.py  aggregate_avg_stddev.py  aggregate_avg_stddev_over_benchmarks.py  aggregate_contamination.py  aggregate_final.py  aggregate_methods.py  aggregate_summary.py  aggregate_time.py  aggregate_time_avg_stddev.py  aggregate_time_baselines.py  aggregate_together.py  baseline_results.json  baselines_tinker.py  chat.py  compute_baseline_metrics.py  compute_baseline_metrics_by_benchmark.py  compute_claude_costs.py  compute_single_metrics.py  compute_single_metrics_avg_stddev.py  constants.py  extract_token_usage.py  ifeval_modal.py  list_safetensors.py  migrate_judgement_files.py  mine_trajectory.py  mmlu_modal.py  mmmlu_modal.py  regression_baselines.json  report.py  run_baselines.py  run_regression_baselines.py
scripts/prompts/: judge.txt  mine_trajectory.txt
src/: README.md  __init__.py  adapter.py  build.sh  constants.py  harbor_patch.py  run_adapter.py  tinker_util.py
src/base_template/tests/: test.sh  verifier.py
src/configs/: job-gpu-30min.yaml  job-gpu-oracle-modal.yaml  job-gpu-oracle.yaml  job-gpu-runpod.yaml  job-gpu.yaml  job-tinker.yaml  run-baselines.yaml
src/harbor_adapter/: README.md  __init__.py  adapter.py  run_job.py  test_task.sh
src/harbor_adapter/template/: instruction.md
src/harbor_template/: instruction.md  instruction.tinker.md  solution.sh  solution.tinker.sh  task.tinker.toml  task.toml
src/harbor_template/environment/: Dockerfile  Dockerfile.tinker  base.Dockerfile  contamination_judge.py  gpu.Dockerfile  gpu_sampler.sh  runpod-ssh.Dockerfile  runpod-ssh.gpu.Dockerfile  setup.sh  timer.sh  tinker.Dockerfile
src/harbor_template/judge/: contamination_judge.py
src/harbor_template/tests/: compute_parser.py  contamination.sh  hf_upload.py  regression_suite.py  test.sh  test.tinker.sh  verifier.py
src/prime_rl_template/: instruction.md  task.toml
src/tasks/aime2025/: evaluate.py  (+1 more)
(+64 files in other folders)
