[project]
name = "posttrainbench"
version = "0.1.0"
description = "Benchmark for measuring CLI agents' ability to post-train LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "modal>=1.3.0.post1",
    "datasets>=2.0.0",
    "harbor @ git+https://github.com/harbor-framework/harbor@main",
    "daytona>=0.1.0",
    "chz",
]

[project.optional-dependencies]
dev = [
    "inspect-ai",
    "inspect-evals",
    "tinker",
    "tinker-cookbook",
    "openai>=2.26.0",
    "requests",
    "tiktoken",
    "shortuuid",
    "tqdm",
    "python-dotenv",
    "runpod",
    "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.13"
